[package]
name = "gitus"
version = "0.1.0"
edition = "2024"
authors = ["daxog"]
description = "Simple CLI tool for switching between Git users."
license = "MIT"
repository = "https://github.com/daxog/gitus"
keywords = ["git", "cli", "profile", "switch"]
categories = ["command-line-utilities", "development-tools"]
documentation = "https://docs.rs/gitus"

[dependencies]
clap = { version = "4.5.37", features = ["derive"] }
colored = "3.0.0"
dirs = "6.0.0"
inquire = "0.7.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
validator = "0.20.0"
